<resources>
    <string name="app_name">Mixipe</string>
    <string name="apiKey">0de4c154135142d3b7adf45dd6b52b83</string>
    <string name="mixipe">Mixipe</string>
    <string name="create_new_account">Create New Account</string>
    <string name="email">Email</string>
    <string name="user_login">User Login</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="hello_world">HelloWorld</string>
    <string name="like">Like</string>
    <string name="dislike">Dislike</string>



    <string-array name="tags">
        <item>main course</item>
        <item>side dish</item>
        <item>soup</item>
        <item>appetizer</item>
        <item>fingerfood</item>
        <item>snack</item>
        <item>marinade</item>
        <item>breakfast</item>
        <item>bread</item>
        <item>salad</item>
        <item>beverage</item>
        <item>drink</item>
        <item>sauce</item>
        <item>dessert</item>
    </string-array>

    <string-array name="tag">
        <item>African</item>
        <item>American</item>
        <item>British</item>
        <item>Cajun</item>
    </string-array>


</resources>