<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00AFAF"
    tools:context=".Register">

    <ProgressBar
        android:id="@+id/progressBar3"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/appName2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/appName2"
        app:layout_constraintVertical_bias="0.36" />

    <TextView
        android:id="@+id/appName2"
        android:layout_width="413dp"
        android:layout_height="73dp"
        android:background="#006C79"
        android:fontFamily="sans-serif-light"
        android:text="@string/mixipe"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#80CBC4"
        android:textSize="48sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/UserLogin"
        android:layout_width="254dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/create_new_account"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/LoginBtn"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"
        android:background="#006C79"
        android:fontFamily="sans-serif-light"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegisterBtn" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="254dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:hint="Password"
        android:inputType="textPersonName|textPassword"
        android:padding="10sp"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/RegisterBtn"
        android:layout_width="254dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="#006C79"
        android:fontFamily="sans-serif-light"
        android:text="Register"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Confirm" />

    <EditText
        android:id="@+id/Confirm"
        android:layout_width="254dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:hint="Confirm Password"
        android:inputType="textPersonName|textPassword"
        android:padding="10sp"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="254dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:hint="@string/email"
        android:inputType="textWebEmailAddress|textPersonName|textEmailSubject"
        android:padding="10sp"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FullName" />

    <EditText
        android:id="@+id/FullName"
        android:layout_width="254dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:hint="Full Name"
        android:inputType="textPersonName"
        android:padding="10sp"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>